@@ -2,6 +2,7 @@
 no codename
 ========
 
+050930: CStringHelper::countLines added.
 050927: Big good change: if effects don't contain state restoring pass
 		(PLast), it is automatically generated by the engine. In this
 		case, you need to call setStatesConfig() on EffectBundle at
